# concurrent-exchange-sim

./: .gitignore  CMakeLists.txt  COPILOT_INSTRUCTIONS  README.md
benchmarks/: CMakeLists.txt  bench_engine_latency.cpp  bench_order_book.cpp
cmake/: .gitkeep
data/: sample_orders.csv
include/ces/common/: concepts.hpp  macros.hpp  time.hpp  types.hpp
include/ces/concurrency/: pinning.hpp  ring_buffer.hpp  spsc_semaphore_queue.hpp
include/ces/engine/: accounts.hpp  matching_engine.hpp  risk.hpp  trader.hpp
include/ces/lob/: order.hpp  order_book.hpp  price_level.hpp
include/ces/logging/: async_logger.hpp
include/ces/memory/: arena.hpp  object_pool.hpp
include/ces/metrics/: latency.hpp  stats.hpp
scripts/: run_bench.sh
src/: main.cpp
src/engine/: accounts.cpp  matching_engine.cpp  trader.cpp
src/lob/: order_book.cpp
src/logging/: async_logger.cpp
src/metrics/: latency.cpp
tests/: CMakeLists.txt  test_matching.cpp  test_order_book.cpp  test_ring_buffer.cpp
tools/: replay_from_csv.cpp
